--- a/index.html
+++ b/index.html
@@ -53,158 +53,158 @@
         <!-- Alaska Parks -->
 
             <div id="AK" class="btnGroup">
-                <button class="myButton" onclick="myFunction('bela')">Bering Land Bridge</button>
-                <button class="myButton" onclick="myFunction('dena')">Denali</button>
-                <button class="myButton" onclick="myFunction('gaar')">Gates of the Arctic</button>
-                <button class="myButton" onclick="myFunction('glba')">Glacier Bay</button>
-                <button class="myButton" onclick="myFunction('katm')">Katmai</button>
-                <button class="myButton" onclick="myFunction('kova')">Kobuk Valley</button>
-                <button class="myButton" onclick="myFunction('lacl')">Lake Clark</button>
-                <button class="myButton" onclick="myFunction('wrst')">Wrangell-St Elias</button>
+                <button class="myButton" onclick="getParkCode('bela')">Bering Land Bridge</button>
+                <button class="myButton" onclick="getParkCode('dena')">Denali</button>
+                <button class="myButton" onclick="getParkCode('gaar')">Gates of the Arctic</button>
+                <button class="myButton" onclick="getParkCode('glba')">Glacier Bay</button>
+                <button class="myButton" onclick="getParkCode('katm')">Katmai</button>
+                <button class="myButton" onclick="getParkCode('kova')">Kobuk Valley</button>
+                <button class="myButton" onclick="getParkCode('lacl')">Lake Clark</button>
+                <button class="myButton" onclick="getParkCode('wrst')">Wrangell-St Elias</button>
             </div>
             <!-- Arkansas Park -->
             <div id="AR" class="btnGroup">
-                <button class="myButton" onclick="myFunction('hosp')">Hot Springs</button>
+                <button class="myButton" onclick="getParkCode('hosp')">Hot Springs</button>
             </div>  
             <!-- Arizona Parks -->
             <div id="AZ" class="btnGroup">
-                <button class="myButton" onclick="myFunction('grca')">Grand Canyon</button>
-                <button class="myButton" onclick="myFunction('pefo')">Petrified Forest</button>
-                <button class="myButton" onclick="myFunction('sagu')">Saguaro</button>
+                <button class="myButton" onclick="getParkCode('grca')">Grand Canyon</button>
+                <button class="myButton" onclick="getParkCode('pefo')">Petrified Forest</button>
+                <button class="myButton" onclick="getParkCode('sagu')">Saguaro</button>
             </div>
             <!-- California Parks -->
             <div id="CA" class="btnGroup">
-                <button class="myButton" onclick="myFunction('chis')">Channel Islands</button>
-                <button class="myButton" onclick="myFunction('deva')">Death Valley (California)</button>
-                <button class="myButton" onclick="myFunction('jotr')">Joshua Tree</button>
-                <button class="myButton" onclick="myFunction('lavo')">Lessen Volcanic</button>
-                <button class="myButton" onclick="myFunction('pinn')">Pinnacles</button>
-                <button class="myButton" onclick="myFunction('redw')">Redwood</button>
-                <button class="myButton" onclick="myFunction('seki')">Sequoia</button>
-                <button class="myButton" onclick="myFunction('yose')">Yosemite</button>
+                <button class="myButton" onclick="getParkCode('chis')">Channel Islands</button>
+                <button class="myButton" onclick="getParkCode('deva')">Death Valley (California)</button>
+                <button class="myButton" onclick="getParkCode('jotr')">Joshua Tree</button>
+                <button class="myButton" onclick="getParkCode('lavo')">Lessen Volcanic</button>
+                <button class="myButton" onclick="getParkCode('pinn')">Pinnacles</button>
+                <button class="myButton" onclick="getParkCode('redw')">Redwood</button>
+                <button class="myButton" onclick="getParkCode('seki')">Sequoia</button>
+                <button class="myButton" onclick="getParkCode('yose')">Yosemite</button>
             </div>
             <!-- Colorado Parks -->
             <div id="CO" class="btnGroup">
-                <button class="myButton" onclick="myFunction('blca')">Black Canyon of the Gunnison</button>
-                <button class="myButton" onclick="myFunction('grsa')">Great Sand Dunes</button>
-                <button class="myButton" onclick="myFunction('meve')">Mesa Verde</button>
-                <button class="myButton" onclick="myFunction('romo')">Rocky Mountain</button>
+                <button class="myButton" onclick="getParkCode('blca')">Black Canyon of the Gunnison</button>
+                <button class="myButton" onclick="getParkCode('grsa')">Great Sand Dunes</button>
+                <button class="myButton" onclick="getParkCode('meve')">Mesa Verde</button>
+                <button class="myButton" onclick="getParkCode('romo')">Rocky Mountain</button>
             </div>
             <!-- Florida Parks -->
             <div id="FL" class="btnGroup">
-                <button class="myButton" onclick="myFunction('bisc')">Biscayne</button>
-                <button class="myButton" onclick="myFunction('drto')">Dry Tortugas</button>
-                <button class="myButton" onclick="myFunction('ever')">Everglades</button>
+                <button class="myButton" onclick="getParkCode('bisc')">Biscayne</button>
+                <button class="myButton" onclick="getParkCode('drto')">Dry Tortugas</button>
+                <button class="myButton" onclick="getParkCode('ever')">Everglades</button>
             </div>
             <!-- Hawai'i Parks -->
             <div id="HI" class="btnGroup">
-                <button class="myButton" onclick="myFunction('hale')">Haleakala</button>
-                <button class="myButton" onclick="myFunction('havo')">Hawai'i Volcanoes</button>
+                <button class="myButton" onclick="getParkCode('hale')">Haleakala</button>
+                <button class="myButton" onclick="getParkCode('havo')">Hawai'i Volcanoes</button>
             </div>
             <!-- Idaho Park -->
             <div id="ID" class="btnGroup">
-                <button class="myButton" onclick="myFunction('yell')">Yellowstone (Idaho)</button>
+                <button class="myButton" onclick="getParkCode('yell')">Yellowstone (Idaho)</button>
             </div>
             <!-- Indiana Park -->
             <div id="IN" class="btnGroup">
-                <button class="myButton" onclick="myFunction('indu')">Indiana Dunes</button>
+                <button class="myButton" onclick="getParkCode('indu')">Indiana Dunes</button>
             </div>
             <!-- Kentucky Park -->
             <div id="KY" class="btnGroup">
-                <button class="myButton" onclick="myFunction('maca')">Mammoth Cave</button>
+                <button class="myButton" onclick="getParkCode('maca')">Mammoth Cave</button>
             </div>
             <!-- Maryland Park -->
             <div id="MD" class="btnGroup">
-                <button class="myButton" onclick="myFunction('asis')">Assateague Island (Maryland)</button>
+                <button class="myButton" onclick="getParkCode('asis')">Assateague Island (Maryland)</button>
             </div>
             <!-- Maine Park -->
             <div id="ME" class="btnGroup">
-                <button class="myButton" onclick="myFunction('acad')">Acadia</button>
+                <button class="myButton" onclick="getParkCode('acad')">Acadia</button>
             </div>
             <!-- Michigan Park -->
             <div id="MI" class="btnGroup">
-                <button class="myButton" onclick="myFunction('isro')">Isle Royale</button>
+                <button class="myButton" onclick="getParkCode('isro')">Isle Royale</button>
             </div>
             <!-- Minnesota Park -->
             <div id="MN" class="btnGroup">
-                <button class="myButton" onclick="myFunction('voya')">Voyageurs</button>
+                <button class="myButton" onclick="getParkCode('voya')">Voyageurs</button>
             </div>
             <!-- Montana Parks -->
             <div id="MT" class="btnGroup">
-                <button class="myButton" onclick="myFunction('glac')">Glacier</button>
-                <button class="myButton" onclick="myFunction('yell')">Yellowstone (Montana)</button>
+                <button class="myButton" onclick="getParkCode('glac')">Glacier</button>
+                <button class="myButton" onclick="getParkCode('yell')">Yellowstone (Montana)</button>
             </div>
             <!-- North Carolina Park -->
             <div id="NC" class="btnGroup">
-                <button class="myButton" onclick="myFunction('grsm')">Great Smokey Mountains  &nbsp; (North Carolina)</button>
+                <button class="myButton" onclick="getParkCode('grsm')">Great Smokey Mountains  &nbsp; (North Carolina)</button>
             </div>
             <!-- North Dakota Park -->
             <div id="ND" class="btnGroup">
-                <button class="myButton" onclick="myFunction('thro')">Theodore Roosevelt</button>
+                <button class="myButton" onclick="getParkCode('thro')">Theodore Roosevelt</button>
             </div>
             <!-- New Mexico Park -->
             <div id="NM" class="btnGroup">
-                <button class="myButton" onclick="myFunction('cave')">Carlsbad Caverns</button>
+                <button class="myButton" onclick="getParkCode('cave')">Carlsbad Caverns</button>
             </div>
 
             <div id="NV" class="btnGroup">
-                <button class="myButton" onclick="myFunction('deva')">Death Valley (Nevada)</button>
-                <button class="myButton" onclick="myFunction('grba')">Great Basin</button>
+                <button class="myButton" onclick="getParkCode('deva')">Death Valley (Nevada)</button>
+                <button class="myButton" onclick="getParkCode('grba')">Great Basin</button>
             </div>
             <!-- Ohio Park -->
             <div id="OH" class="btnGroup">
-                <button class="myButton" onclick="myFunction('cuva')">Cuyahoga Valley</button>
+                <button class="myButton" onclick="getParkCode('cuva')">Cuyahoga Valley</button>
             </div>
             <!-- Oregon Park -->
             <div id="OR" class="btnGroup">
-                <button class="myButton" onclick="myFunction('crla')">Crater Lake</button>
+                <button class="myButton" onclick="getParkCode('crla')">Crater Lake</button>
             </div>
             <!-- South Carolina Park -->
             <div id="SC" class="btnGroup">
-                <button class="myButton" onclick="myFunction('cong')">Congaree Swamp</button>
+                <button class="myButton" onclick="getParkCode('cong')">Congaree Swamp</button>
             </div>
             
             <div id="SD" class="btnGroup">
-                <button class="myButton" onclick="myFunction('badl')">Badlands</button>
-                <button class="myButton" onclick="myFunction('wica')">Wind Cave</button>
+                <button class="myButton" onclick="getParkCode('badl')">Badlands</button>
+                <button class="myButton" onclick="getParkCode('wica')">Wind Cave</button>
             </div>
 
             <div id="TN" class="btnGroup">
-                <button class="myButton" onclick="myFunction('grsm')">Great Smokey Mountains &nbsp;(Tennessee)</button>
+                <button class="myButton" onclick="getParkCode('grsm')">Great Smokey Mountains &nbsp;(Tennessee)</button>
             </div>
             <!-- Texas Parks -->
             <div id="TX" class="btnGroup">
-                <button class="myButton" onclick="myFunction('amis')">Amistad</button>
-                <button class="myButton" onclick="myFunction('bibe')">Big Bend</button>
-                <button class="myButton" onclick="myFunction('gumo')">Guadalupe Mountains</button>
+                <button class="myButton" onclick="getParkCode('amis')">Amistad</button>
+                <button class="myButton" onclick="getParkCode('bibe')">Big Bend</button>
+                <button class="myButton" onclick="getParkCode('gumo')">Guadalupe Mountains</button>
             </div>
             <!-- Utah Parks -->
             <div id="UT" class="btnGroup">
-                <button class="myButton" onclick="myFunction('arch')">Arches</button>
-                <button class="myButton" onclick="myFunction('cany')">Canyonlands</button>
-                <button class="myButton" onclick="myFunction('care')">Capitol Reef</button>
-                <button class="myButton" onclick="myFunction('zion')">Zion</button>
+                <button class="myButton" onclick="getParkCode('arch')">Arches</button>
+                <button class="myButton" onclick="getParkCode('cany')">Canyonlands</button>
+                <button class="myButton" onclick="getParkCode('care')">Capitol Reef</button>
+                <button class="myButton" onclick="getParkCode('zion')">Zion</button>
             </div>
             <!-- Virginia Park -->
             <div id="VA" class="btnGroup">
-                <button class="myButton" onclick="myFunction('asis')">Assateague Island (Virginia)</button>
-                <button class="myButton" onclick="myFunction('shen')">Shenandoah</button>
+                <button class="myButton" onclick="getParkCode('asis')">Assateague Island (Virginia)</button>
+                <button class="myButton" onclick="getParkCode('shen')">Shenandoah</button>
             </div>
             <!-- Virgin Islands Park -->
             <div id="VI" class="btnGroup">
-                <button class="myButton" onclick="myFunction('viis')">Virgin Islands</button>
+                <button class="myButton" onclick="getParkCode('viis')">Virgin Islands</button>
             </div>
             <!-- Washington Park -->
             <div id="WA" class="btnGroup">
-                <button class="myButton" onclick="myFunction('kefj')">Kenai Fyords</button>
-                <button class="myButton" onclick="myFunction('mora')">Mount Ranier</button>
-                <button class="myButton" onclick="myFunction('noca')">North Cascades</button>
-                <button class="myButton" onclick="myFunction('olym')">Olympic</button>
+                <button class="myButton" onclick="getParkCode('kefj')">Kenai Fyords</button>
+                <button class="myButton" onclick="getParkCode('mora')">Mount Ranier</button>
+                <button class="myButton" onclick="getParkCode('noca')">North Cascades</button>
+                <button class="myButton" onclick="getParkCode('olym')">Olympic</button>
             </div>
             <!-- Wyoming Park -->
             <div id="WY" class="btnGroup">
-                <button class="myButton" onclick="myFunction('grte')">Grand Teton</button>
-                <button class="myButton" onclick="myFunction('yell')">Yellowstone (Wyoming)</button>
+                <button class="myButton" onclick="getParkCode('grte')">Grand Teton</button>
+                <button class="myButton" onclick="getParkCode('yell')">Yellowstone (Wyoming)</button>
             </div>
 
             <!-- bootstrap stuff -->
