--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <option value ="ID">Idaho</option>
                 <option value ="IN">Indiana</option>
                 <option value ="KY">Kentucky</option>
+                <option value ="ME">Maine</option>
                 <option value ="MD">Maryland</option>
                 <option value ="MI">Michigan</option>
                 <option value ="MN">Minnesota</option>
@@ -212,7 +213,7 @@
                 <div class="card-deck">
 
                     <div class="card"> <!-- 1st card -->
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                        <img src="..." class="card-img-top pkImage" alt="...">
                         <div class="card-body cdcolor">
                             <h5 class="card-title">Card title</h5>
                             <h6>Park's Description</h6>
@@ -224,7 +225,7 @@
                     </div> <!-- 1st card-->
 
                     <div class="card"> <!-- 2nd card-->
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                        <img src="..." class="card-img-top pkImage" alt="...">
                         <div class="card-body cdcolor">
                             <h5 class="card-title">Card title</h5>
                             <h6>Park's Weather Information</h6>
@@ -236,7 +237,7 @@
                     </div> <!-- 2nd card-->
 
                     <div class="card"> <!-- 3rd card-->
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                        <img src="..." class="card-img-top pkImage" alt="...">
                         <div class="card-body cdcolor" id="website">
                             <h5 class="card-title">Card title</h5>
                             <h6>Park's Website: Click Below Link</h6>
@@ -248,7 +249,7 @@
                     </div> <!-- 3rd card-->
 
                     <div class="card"> <!-- 4th card-->
-                        <!-- <img src="..." class="card-img-top" alt="..."> -->
+                        <img src="..." class="card-img-top pkImage" alt="...">
                         <div class="card-body cdcolor" id="directions">
                             <h5 class="card-title">Card title</h5>
                             <h6>Directions to Park</h6>
@@ -276,6 +277,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="vars.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
