--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <footer id="myFooter">
         <div class="jumbotron jumbotron-fluid  acknow">
             <div class="container">
-                <h1 class="display-4">Special Acknowledgement</h1>
+                <h1 class="display-4 ackno">Special Acknowledgement</h1>
                 <p class="lead font-style">I want to thank the AWESOME <em style="color:cornflowerblue">Kelly Fox</em> from the National Park Service. She provided 
                     me with an Excel&#8482; worksheet containing the 4-letter codes of each National Park. I couldn't have 
                     completed this API without her help. A big shout out to you, Kelly.
